# goaltender_analytics

./: .gitignore  LICENSE  README.md  check_calib.py  check_xg.py  pyproject.toml  recalibrate_xg.py  requirements.txt
dashboard/: .gitkeep
dashboard/api/: main.py
dashboard/ui/: index.html  main.js  style.css
data/: .gitkeep
docs/: .gitkeep  phase0_walkthrough.md
notebooks/: .gitkeep
src/: __init__.py
src/features/: __init__.py  age_curves.py  build_features.py
src/ingestion/: __init__.py  api_client.py  checkpoint.py  schema.py  scrape_edge.py  scrape_pbp.py  scrape_shifts.py  validators.py
src/metrics/: __init__.py  base_metrics.py  compute_all.py  dsis_bayesian.py
src/models/: __init__.py  baseline_xg.py  bayesian_dsis.py  catboost_xg.py  evaluation.py  kalman_filter.py  predict_xg.py  projections.py  train_xg.py  tune_catboost.py
src/utils/: fetch_names.py  fix_missing_names.py
src/visualization/: generate_player_cards.py  prep_card_data.py
src/viz/: __init__.py  player_cards.py
tests/: __init__.py  test_features.py  test_ingestion.py
